HandCheckerTile in HandChecker
Implemented HandCheckerTile in HandChecker. Takes the place of
MeldTypeStackList. Tested, and seems to be working fine.